Updated from deployment.

--- a/config/config/dashbase-api/conf/config.yml
+++ b/config/config/dashbase-api/conf/config.yml
@@ -15,7 +15,7 @@ server:
   applicationConnectors:
     - type: https
       port: ${PORT}
-      keyStorePath: /app/keystore
+      keyStorePath: /run/secrets/keystore
       keyStorePassword: ${KEYSTORE_PASSWORD}
       validateCerts: false
   applicationContextPath: /
