--- a/config/config/dashbase-tables/monitor/config.yml
+++ b/config/config/dashbase-tables/monitor/config.yml
@@ -4,7 +4,7 @@ zipkinFactory:
   baseUrl: ${ZIPKIN_URL}
   servicePort: ${PORT}
   serviceName: "table/${TABLE_NAME}"
-  
+
 dashbase:
   # cluster configuration
   cluster:
@@ -33,6 +33,13 @@ dashbase:
         groupId: dashbase
         topic: ${KAFKA_TOPIC}_avro
         partitions: 0
+        kafkaProps:
+          security.protocol: SSL
+          ssl.truststore.location: /run/secrets/keystore
+          ssl.truststore.password: ${KEYSTORE_PASSWORD}
+          ssl.keystore.location: /run/secrets/keystore
+          ssl.keystore.password: ${KEYSTORE_PASSWORD}
+          ssl.key.password: ${KEYSTORE_PASSWORD}
 
   parser:
     type: avro_native
@@ -42,7 +49,7 @@ server:
   applicationConnectors:
     - type: https
       port: ${PORT}
-      keyStorePath: /app/keystore
+      keyStorePath: /run/secrets/keystore
       keyStorePassword: ${KEYSTORE_PASSWORD}
       validateCerts: false
   applicationContextPath: /
