--- a/config/config/dashbase-tables/table/conf/config.yml
+++ b/config/config/dashbase-tables/table/conf/config.yml
@@ -18,9 +18,9 @@ dashbase:
         partitions: "${KAFKA_PARTITIONS}"
         kafkaProps:
           security.protocol: SSL
-          ssl.truststore.location: /app/keystore
+          ssl.truststore.location: /run/secrets/keystore
           ssl.truststore.password: ${KEYSTORE_PASSWORD}
-          ssl.keystore.location: /app/keystore
+          ssl.keystore.location: /run/secrets/keystore
           ssl.keystore.password: ${KEYSTORE_PASSWORD}
           ssl.key.password: ${KEYSTORE_PASSWORD}
 
@@ -42,7 +42,7 @@ server:
   applicationConnectors:
     - type: https
       port: ${PORT}
-      keyStorePath: /app/keystore
+      keyStorePath: /run/secrets/keystore
       keyStorePassword: ${KEYSTORE_PASSWORD}
       validateCerts: false
   applicationContextPath: /
