--- a/config/config/warg/monitor.yml
+++ b/config/config/warg/monitor.yml
@@ -2,6 +2,15 @@ applicationId: warg-monitor
 
 kafkaBootstrapServers: monitor_kafka:9092
 
+kafkaProps:
+  security.protocol: SSL
+  ssl.truststore.location: /run/secrets/keystore
+  ssl.truststore.password: ${KEYSTORE_PASSWORD}
+  ssl.keystore.location: /run/secrets/keystore
+  ssl.keystore.password: ${KEYSTORE_PASSWORD}
+  ssl.key.password: ${KEYSTORE_PASSWORD}
+
+
 topics: _logs,_metrics
 
 outputTopicSuffix: _avro
