--- a/config/proxy/config.yml
+++ b/config/proxy/config.yml
@@ -2,7 +2,7 @@ server:
   applicationConnectors:
     - type: https
       port: 9200
-      keyStorePath: /app/keystore
+      keyStorePath: /run/secrets/keystore
       keyStorePassword: ${KEYSTORE_PASSWORD}
       validateCerts: false
   adminConnectors:
@@ -14,9 +14,9 @@ kafka:
     clientId: dashbase
     kafkaProps:
       security.protocol: SSL
-      ssl.truststore.location: /app/keystore
+      ssl.truststore.location: /run/secrets/keystore
       ssl.truststore.password: ${KEYSTORE_PASSWORD}
-      ssl.keystore.location: /app/keystore
+      ssl.keystore.location: /run/secrets/keystore
       ssl.keystore.password: ${KEYSTORE_PASSWORD}
       ssl.key.password: ${KEYSTORE_PASSWORD}
 
