Updated from deployment.

--- a/docker-compose-rexray-ebs.yml
+++ b/docker-compose-rexray-ebs.yml
@@ -6,13 +6,10 @@ volumes:
     driver_opts:
       volumetype: "st1"
       size: 1500
-  monitor_index:
-    driver: rexray/ebs
-    driver_opts:
-      volumetype: "st1"
-      size: 500
+      encrypted: "true"
   kafka_data:
     driver: rexray/ebs
     driver_opts:
       volumetype: "st1"
       size: 500
+      encrypted: "true"
