--- a/config/dashbase-tables/table/conf/config.yml
+++ b/config/dashbase-tables/table/conf/config.yml
@@ -50,6 +50,15 @@ server:
   adminConnectors:
     - type: http
       port: ${ADMINPORT}
+metrics:
+  reporters:
+    - type: dashbase
+      url: ${MONITOR_URL}
+      includes:
+        - ^jvm.*$
+        - ^dashbase.*$
+      useRegexFilters: true
+      frequency: 5 seconds
 
 logging:
   level: INFO
@@ -59,5 +68,8 @@ logging:
         archive: true
         archivedLogFilenamePattern: /app/logs/dashbase-table-%d.log
         archivedFileCount: 9
+        timeZone: UTC
+      - type: dashbase
+        url: ${MONITOR_URL}
         timeZone: UTC
       - type: console
