--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -93,11 +93,47 @@ services:
     env_file:
       - env
 
+  monitor:
+    image: dashbase/table:latest
+    depends_on:
+      - zookeeper
+    networks:
+      - backend
+    configs:
+      - source: monitor_config
+        target: /app/config.yml
+    secrets:
+      - source: keystore
+        target: /app/keystore
+    ports:
+      - "9888:9888"
+    command: ["server", "/app/config.yml"]
+    deploy:
+      placement:
+       constraints: [node.role == manager]
+    volumes:
+      - logs:/app/logs:rw
+      - monitor_index:/dashbase/index:rw
+    env_file:
+      - env
+    environment:
+      MONITOR_URL: https://monitor:9888
+      ZOOKEEPER_URL: zookeeper:2181
+      PORT: 9888
+      ADMINPORT: 9988
+      JAVA_OPTS: -Xmx2g -Xms1g -XX:NewSize=1g
+    # healthcheck:
+    #   test: ["CMD", "curl", "-f", "https://monitor:9988", "--insecure"]
+    #   interval: 3m
+    #   timeout: 20s
+    #   retries: 3
+
   table:
     image: dashbase/table:latest
     depends_on:
       - warg
       - zipkin
+      - monitor
     networks:
       - backend
     configs:
@@ -119,6 +155,7 @@ services:
       KAFKA_PARTITIONS: 0 # CSV
       ZOOKEEPER_URL: zookeeper:2181
       ZIPKIN_URL: http://zipkin:9411/
+      MONITOR_URL: https://monitor:9888
       PORT: 7888
       ADMINPORT: 7988
       JAVA_OPTS: -Xmx8g -Xms4g -XX:NewSize=2g
@@ -134,6 +171,7 @@ services:
     image: dashbase/api:latest
     depends_on:
       - zookeeper
+      - monitor
       - table
       - zipkin
     networks:
@@ -160,6 +198,7 @@ services:
       PORT: 9876
       ADMINPORT: 9976
       ZOOKEEPER_URL: zookeeper:2181
+      MONITOR_URL: https://monitor:9888
       JAVA_OPTS: -Xmx1g -Xms512m -XX:NewSize=512m
       ZIPKIN_URL: http://zipkin:9411/
     # healthcheck:
@@ -479,6 +518,7 @@ services:
 
 volumes:
   table_index:
+  monitor_index:
   kafka_data:
   monitor_logs_index:
   monitor_metrics_index:
