Updated from deployment

--- a/config/dashbase-tables/monitor/config.yml
+++ b/config/dashbase-tables/monitor/config.yml
@@ -19,6 +19,7 @@ dashbase:
   indexer:
     minBufferedSizeMB: 50
     maxBufferDelayInSec: 10
+    storeRawInput: ${STORE_RAW_INPUT}
 
   retention:
     expirationHandler:
