--- a/config/filebeat/filebeat.yml
+++ b/config/filebeat/filebeat.yml
@@ -65,18 +65,6 @@ filebeat.prospectors:
   multiline.match: after
 
 - type: log
-  paths: [/app/logs/system-monitor.log]
-  fields:
-    service: table
-    log_type: logback
-    log_pattern: "%-5p [%d{ISO8601}] %c: %m%n"
-    table_name: _system
-    partition: "0"
-  multiline.pattern: '^[^A-Z]|^$'
-  multiline.negate: false
-  multiline.match: after
-
-- type: log
   paths: [/app/logs/_logs-logs.log]
   fields:
     service: table
@@ -95,6 +83,18 @@ filebeat.prospectors:
     log_type: logback
     log_pattern: "%-5p [%d{ISO8601}] %c: %m%n"
     table_name: _metrics
+    partition: "0"
+  multiline.pattern: '^[^A-Z]|^$'
+  multiline.negate: false
+  multiline.match: after
+
+- type: log
+  paths: [/app/logs/_traces-logs.log]
+  fields:
+    service: table
+    log_type: logback
+    log_pattern: "%-5p [%d{ISO8601}] %c: %m%n"
+    table_name: _traces
     partition: "0"
   multiline.pattern: '^[^A-Z]|^$'
   multiline.negate: false
