Updated from deployment

--- a/config/metricbeat/table.yml
+++ b/config/metricbeat/table.yml
@@ -11,7 +11,7 @@ metricbeat.modules:
     partition: '"${PARTITION}"'
 
 output.kafka:
-  hosts: ['dashbase-core_monitor_kafka:9092']
+  hosts: ['monitor_kafka:9092']
   topic: _metrics
 
   ssl:
